client-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      name: client-pod
      labels:
        app: client
    spec:
      containers:
        - name: client
          image: hosnikadour/frontend-app-iteslab:v11
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: client-srv
spec:
  type: LoadBalancer
  selector:
    app: client
  ports:
      - protocol: TCP
        port: 80
        targetPort: 80
