mongo-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  mongo-depl
spec:
  replicas: 1
  selector:
     matchLabels:
        app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
        - name: mongo
          image: docker.io/mongo:4.2
          resources:
            requests:
              memory: 200Mi
              cpu: 100m
            limits:
              memory: 200Mi
              cpu: 100m
          volumeMounts:
            - name: mongo-storage
              mountPath: /data/db
      volumes:
        - name: mongo-storage
          persistentVolumeClaim:
            claimName: mongo-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-srv
spec:
  selector:
    app: mongo
  type: ClusterIP
  ports:
    - port: 27017
      targetPort: 27017
