server-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      name: server-pod
      labels:
        app: server
    spec:
      containers:
        - name: server
          image: hosnikadour/backend-iteslab:v4
          resources:
            requests:
              memory: 200Mi
              cpu: 100m
---
apiVersion: v1
kind: Service
metadata:
  name: server-srv
spec:
  type: LoadBalancer
  selector:
    app: server
  ports:
    - protocol: TCP
      port: 4000
      targetPort: 4000
